fixed input field alignment (width of a field + unit)
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@16269 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common-template.css
+++ b/styles/common-template.css
@@ -1883,6 +1883,7 @@ div .panel_block #dataEntry .iphone_field { margin-left: 10px; }
 .rounded_rect_tbl .data_td { width: 100%; }
 .rounded_rect_tbl .data_td table { width: 100%; }
 #dataEntry .input_td { height: 40px; width: 100%; text-align:right; padding: 0px 3px; color: &[PrimaryColor_4_text];;}
+#dataEntry .input_td .xs { display: inline-block;  margin-left: 5px; overflow: hidden; }
 * html .data_td .input_td td { text-align:right; } /* fields alignment in IE */
 .rounded_rect_tbl .option_icon_td { padding-right: 4px; }
 .rounded_rect_tbl .option_icon_td img, .icon16 { width: 16px; height: 16px; }
